--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dự án 3G</title>
+    <title>Dự án 3</title>
   </head>
   <body>
-    Dự án 3
+    <h1>Dự án 3</h1>
+    <h2>Sửa đổi l1</h2>
   </body>
 </html>
